UPD: to use jinja2 builtin filter for displaying the message size

--- a/maestro-reports/src/main/resources/org/maestro/reports/modern/index-node.html
+++ b/maestro-reports/src/main/resources/org/maestro/reports/modern/index-node.html
@@ -118,7 +118,7 @@
 
                                 <tr>
                                     <td>Message Size</td>
-                                    <td>{{ messageSize }} bytes {% if variableSize == 1 %} (+/- 5% variation) {% endif %} </td>
+                                    <td>{{ messageSize | filesizeformat(true) }} {% if variableSize == 1 %} (+/- 5% variation) {% endif %} </td>
                                 </tr>
                                 <tr>
                                     <td>Messaging Protocol</td>
