--- a/maestro-reports/src/main/resources/org/maestro/reports/modern/index-main.html
+++ b/maestro-reports/src/main/resources/org/maestro/reports/modern/index-main.html
@@ -96,7 +96,7 @@
                     <td>{{ reportDir.nodeType }} </td>
                     <td>{{ reportDir.rate }} msg/sec </td>
                     <td>{{ reportDir.parallelCount }} </td>
-                    <td>{{ reportDir.messageSize }} bytes {% if reportDir.variableSize == true %} (+/- 5% variation) {% endif %} </td>
+                    <td>{{ reportDir.messageSize | filesizeformat(true) }} {% if reportDir.variableSize == true %} (+/- 5% variation) {% endif %} </td>
                     <td><span class={% if reportDir.testSuccessful %} "pficon pficon-ok" {% else %} "pficon pficon-error-circle-o" {% endif %}></span> {% if reportDir.testSuccessful == true %} passed {% else %} failed {% endif %}</td>
                 </tr>
                 {% endfor %}
