--- a/maestro-reports/src/main/resources/org/maestro/reports/modern/index-composed.html
+++ b/maestro-reports/src/main/resources/org/maestro/reports/modern/index-composed.html
@@ -88,7 +88,7 @@
                 {% for composedProperty in propertiesList %}
                 <tr>
                     {% for key, value in composedProperty.context.items() %}
-                    <td>{{ value }} </td>
+                    <td><a href="{{ composedProperty.parentDir }}">{{ value }}</a> </td>
                     {% endfor %}
                 </tr>
                 {% endfor %}
